add resource2
